GNOME Bugzilla – Bug 640362
egg/egg-asn1x.c undefined type
Last modified: 2011-01-24 20:43:08 UTC
Created attachment 179118 [details] Revised type from ulong to gulong In lines 1991-1992 of egg/egg-asn1x.c the type "ulong" is used without being declared. This prevents gnome-keyring 2.32.1 from building on Mac OS X. Attached is a patch which would replace "ulong" with "gulong" (which is used extensively elsewhere in the same file) on those lines. Please let me know if some other behavior was intended and/or if any additional information is necessary. Thanks, Ryan Stonecipher
Thanks. Pushed the patch to the gnome-keyring repository. commit 4050d583e8fe6c5c4bb71f0fd4ba6498cdf5a1b6 Author: Ryan Stonecipher <Ryan.Stonecipher.Fisher@gmail.com> Date: Mon Jan 24 14:42:02 2011 -0600 Fix undefined type in egg-asn1x.c Mac OSX doesn't have a ulong type https://bugzilla.gnome.org/show_bug.cgi?id=640362