Fix undefined type in egg-asn1x.c

Mac OSX doesn't have a ulong type

https://bugzilla.gnome.org/show_bug.cgi?id=640362